tests/integration/tests/examples/check-commands/CHECK/Failure/CHECK.itest
; RUN: printf "String1" | %expect_exit 1 %FILECHECK_EXEC %S/CHECK.check | %FILECHECK_EXEC %s

; CHECK: {{.*}}CHECK.check:2:8: error: CHECK: expected string not found in input
; CHECK: CHECK: String2
; CHECK:        ^
; TODO
; CHECK <stdin>:1:8: note: scanning from here
; TODO
; CHECK String1
; CHECK:        ^
; CHECK-EMPTY:
